--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ env_logger = "0.10"
 log = "0.4"
 wgpu = "22.0"
 pollster = "0.3"
-# bytemuck = { version = "1.16", features = [ "derive" ] }
+bytemuck = { version = "1.16", features = [ "derive" ] }
 
