saving and loading model from file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,12 @@ edition = "2021"
 winit = { version = "0.29", features = ["rwh_05"] }
 env_logger = "0.10"
 log = "0.4"
-# was 22.0
-# wgpu = "22.0"
-# egui = "0.26"
-# egui-wgpu = "0.26"
-# egui-winit = "0.26"
-
 egui-wgpu = "0.27.2"
 wgpu = "0.19.4"
 egui-winit = "0.27.2"
 egui = "0.27.2"
 instant = "0.1"
 pollster = "0.3"
+dxf = "0.5"
 bytemuck = { version = "1.16", features = [ "derive" ] }
 
