compiler for .cad files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ dxf = "0.5"
 bytemuck = { version = "1.16", features = [ "derive" ] }
 rfd = "0.15.3"
 regex = "1.12.2"
+anyhow = "1.0.100"
+meval = "0.2.0"
